--- a/src/app/first/first.component.html
+++ b/src/app/first/first.component.html
@@ -1,1 +1,114 @@
-<p>first works!</p>
+<h1>Angular 12 -- installed</h1>
+<hr />
+
+<mat-icon aria-hidden="false" aria-label="Example home icon">home</mat-icon>
+
+<form class="example-form">
+  <mat-form-field class="example-full-width" appearance="fill">
+    <mat-label>Company (disabled)</mat-label>
+    <input matInput disabled value="Google" />
+  </mat-form-field>
+
+  <table class="example-full-width" cellspacing="0">
+    <tr>
+      <td>
+        <mat-form-field class="example-full-width" appearance="fill">
+          <mat-label>First name</mat-label>
+          <input matInput />
+        </mat-form-field>
+      </td>
+      <td>
+        <mat-form-field class="example-full-width" appearance="fill">
+          <mat-label>Long Last Name That Will Be Truncated</mat-label>
+          <input matInput />
+        </mat-form-field>
+      </td>
+    </tr>
+  </table>
+
+  <p>
+    <mat-form-field class="example-full-width" appearance="fill">
+      <mat-label>Address</mat-label>
+      <textarea matInput placeholder="Ex. 100 Main St">
+1600 Amphitheatre Pkwy</textarea
+      >
+    </mat-form-field>
+    <mat-form-field class="example-full-width" appearance="fill">
+      <mat-label>Address 2</mat-label>
+      <textarea matInput></textarea>
+    </mat-form-field>
+  </p>
+
+  <table class="example-full-width" cellspacing="0">
+    <tr>
+      <td>
+        <mat-form-field class="example-full-width" appearance="fill">
+          <mat-label>City</mat-label>
+          <input matInput placeholder="Ex. San Francisco" />
+        </mat-form-field>
+      </td>
+      <td>
+        <mat-form-field class="example-full-width" appearance="fill">
+          <mat-label>State</mat-label>
+          <input matInput placeholder="Ex. California" />
+        </mat-form-field>
+      </td>
+      <td>
+        <mat-form-field class="example-full-width" appearance="fill">
+          <mat-label>Postal Code</mat-label>
+          <input
+            matInput
+            #postalCode
+            maxlength="5"
+            placeholder="Ex. 94105"
+            value="94043"
+          />
+          <mat-hint align="end">{{ postalCode.value.length }} / 5</mat-hint>
+        </mat-form-field>
+      </td>
+    </tr>
+  </table>
+</form>
+
+-------------------------
+<div fxLayout="row" fxLayout.lt-md="column" fxLayoutGap.gt-sm="10px">
+  <div fxLayout="column" fxLayout.lt-md="column" fxLayoutGap.gt-sm="10px">
+    <mat-form-field appearance="outline">
+      <mat-label>Field Number 1</mat-label>
+      <mat-select>
+        <mat-option *ngFor="let item of [1, 2, 3, 4, 5, 6]" [value]="item">
+          {{ item }}
+        </mat-option>
+      </mat-select>
+    </mat-form-field>
+
+    <mat-form-field appearance="outline">
+      <mat-label>Field Number 2</mat-label>
+      <mat-select>
+        <mat-option *ngFor="let item of [1, 2, 3, 4, 5, 6]" [value]="item">
+          {{ item }}
+        </mat-option>
+      </mat-select>
+    </mat-form-field>
+  </div>
+
+  <div fxLayout="column" fxLayout.lt-md="column" fxLayoutGap.gt-sm="10px">
+    <mat-form-field appearance="outline">
+      <mat-label>Field Number 3</mat-label>
+      <mat-select>
+        <mat-option *ngFor="let item of [1, 2, 3, 4, 5, 6]" [value]="item">
+          {{ item }}
+        </mat-option>
+      </mat-select>
+    </mat-form-field>
+
+    <mat-form-field appearance="outline">
+      <mat-label>Field Number 4</mat-label>
+      <mat-select>
+        <mat-option *ngFor="let item of [1, 2, 3, 4, 5, 6]" [value]="item">
+          {{ item }}
+        </mat-option>
+      </mat-select>
+    </mat-form-field>
+  </div>
+</div>
