--- a/src/styles.scss
+++ b/src/styles.scss
@@ -2,3 +2,65 @@
 
 html, body { height: 100%; }
 body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+
+
+
+.example-form {
+    min-width: 150px;
+    max-width: 500px;
+    width: 100%;
+  }
+  
+  .example-full-width {
+    width: 100%;
+  }
+  
+  td {
+    padding-right: 8px;
+  }
+  //change mat form field height
+  mat-form-field.mat-form-field.mat-form-field-appearance-outline
+    > div.mat-form-field-wrapper
+    > div.mat-form-field-flex
+    > div.mat-form-field-infix {
+    padding: 0.4em 0px;
+  }
+  
+  mat-form-field.mat-form-field.mat-form-field-appearance-outline
+    > div.mat-form-field-wrapper
+    > div.mat-form-field-flex
+    > div.mat-form-field-infix
+    > span.mat-form-field-label-wrapper {
+    top: -1.5em;
+  }
+  
+  .mat-form-field-appearance-outline.mat-form-field-can-float.mat-form-field-should-float
+    .mat-form-field-label {
+    transform: translateY(-1em) scale(0.75);
+    width: 133.33333%;
+  }
+  
+  .mat-form-field-appearance-outline .mat-form-field-prefix,
+  .mat-form-field-appearance-outline .mat-form-field-suffix {
+    top: 0 !important;
+  }
+  
+  .my-form-field .mat-form-field-wrapper {
+    padding-bottom: 7px !important;
+  }
+  .mat-form-field {
+    margin-right: 15px;
+  
+    // margin-bottom: 8px;
+    .mat-form-field-wrapper {
+      padding: 0;
+  
+      .mat-form-field-outline {
+        // color: rgb(255, 255, 255) !important;
+        // border: solid 1px #0000008f;
+        // border-radius: 7px !important;
+        box-shadow: rgba(0, 0, 0, 0.09) 0px 3px 12px !important;
+      }
+    }
+  }
+  
