--- a/src/styles.scss
+++ b/src/styles.scss
@@ -3,7 +3,9 @@
 html, body { height: 100%; }
 body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
 
-
+*{
+color: black !important;
+}
 
 .example-form {
     min-width: 150px;
