update to A13 sucessfully

--- a/src/app/first/first.component.html
+++ b/src/app/first/first.component.html
@@ -2,12 +2,12 @@
 <h1>Angular 13 -- installed</h1>
 <hr />
 
-<apx-chart
+<!-- <apx-chart
   [series]="chartOptions.series"
   [chart]="chartOptions.chart"
   [labels]="chartOptions.labels"
   [responsive]="chartOptions.responsive"
-></apx-chart>
+></apx-chart> -->
 <hr />
 
 <div>
