updated to angular 15 successfully

--- a/src/app/first/first.component.html
+++ b/src/app/first/first.component.html
@@ -1,6 +1,7 @@
 <h1>Angular 12 -- installed</h1>
 <h1>Angular 13 -- installed</h1>
 <h1>Angular 14 -- installed</h1>
+<h1>Angular 15 -- installed</h1>
 <hr />
 
 <!-- <apx-chart
@@ -29,6 +30,14 @@
 <hr />
 
 <div fxLayout="row" fxLayout.lt-md="column" fxLayoutGap.gt-sm="10px">
+
+  <mat-form-field appearance="outline">
+    <mat-label>Outline form field</mat-label>
+    <input matInput placeholder="Placeholder">
+    <mat-icon matSuffix>sentiment_very_satisfied</mat-icon>
+    <mat-hint>Hint</mat-hint>
+  </mat-form-field>
+  
   <div fxLayout="column" fxLayout.lt-md="column" fxLayoutGap.gt-sm="10px">
     <mat-form-field appearance="outline">
       <mat-label>Field Number 1</mat-label>
