--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,68 +1,104 @@
+// Custom Theming for Angular Material
+// For more information: https://material.angular.io/guide/theming
+@use '@angular/material' as mat;
+// Plus imports for other components in your app.
+
+// Include the common styles for Angular Material. We include this here so that you only
+// have to load a single css file for Angular Material in your app.
+// Be sure that you only ever include this mixin once!
+@include mat.core();
+
+// Define the palettes for your theme using the Material Design palettes available in palette.scss
+// (imported above). For each palette, you can optionally specify a default, lighter, and darker
+// hue. Available color palettes: https://material.io/design/color/
+$theme-primary: mat.define-palette(mat.$indigo-palette);
+$theme-accent: mat.define-palette(mat.$pink-palette, A200, A100, A400);
+
+// The warn palette is optional (defaults to red).
+$theme-warn: mat.define-palette(mat.$red-palette);
+
+// Create the theme object. A theme consists of configurations for individual
+// theming systems such as "color" or "typography".
+$theme: mat.define-light-theme((
+  color: (
+    primary: $theme-primary,
+    accent: $theme-accent,
+    warn: $theme-warn,
+  ),
+  typography: mat.define-typography-config(),
+));
+
+// Include theme styles for core and each component used in your app.
+// Alternatively, you can import and @include the theme mixins for each component
+// that you are using.
+@include mat.all-component-themes($theme);
+
+
 /* You can add global styles to this file, and also import other style files */
 
-html, body { height: 100%; }
-body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+html,
+body {
+  height: 100%;
+}
 
-*{
-color: black !important;
+body {
+  margin: 0;
+  font-family: Roboto, "Helvetica Neue", sans-serif;
+}
+
+* {
+  color: black !important;
 }
 
 .example-form {
-    min-width: 150px;
-    max-width: 500px;
-    width: 100%;
-  }
-  
-  .example-full-width {
-    width: 100%;
-  }
-  
-  td {
-    padding-right: 8px;
-  }
-  //change mat form field height
-  mat-form-field.mat-form-field.mat-form-field-appearance-outline
-    > div.mat-form-field-wrapper
-    > div.mat-form-field-flex
-    > div.mat-form-field-infix {
-    padding: 0.4em 0px;
-  }
-  
-  mat-form-field.mat-form-field.mat-form-field-appearance-outline
-    > div.mat-form-field-wrapper
-    > div.mat-form-field-flex
-    > div.mat-form-field-infix
-    > span.mat-form-field-label-wrapper {
-    top: -1.5em;
-  }
-  
-  .mat-form-field-appearance-outline.mat-form-field-can-float.mat-form-field-should-float
-    .mat-form-field-label {
-    transform: translateY(-1em) scale(0.75);
-    width: 133.33333%;
-  }
-  
-  .mat-form-field-appearance-outline .mat-form-field-prefix,
-  .mat-form-field-appearance-outline .mat-form-field-suffix {
-    top: 0 !important;
-  }
-  
-  .my-form-field .mat-form-field-wrapper {
-    padding-bottom: 7px !important;
-  }
-  .mat-form-field {
-    margin-right: 15px;
-  
-    // margin-bottom: 8px;
-    .mat-form-field-wrapper {
-      padding: 0;
-  
-      .mat-form-field-outline {
-        // color: rgb(255, 255, 255) !important;
-        // border: solid 1px #0000008f;
-        // border-radius: 7px !important;
-        box-shadow: rgba(0, 0, 0, 0.09) 0px 3px 12px !important;
-      }
+  min-width: 150px;
+  max-width: 500px;
+  width: 100%;
+}
+
+.example-full-width {
+  width: 100%;
+}
+
+td {
+  padding-right: 8px;
+}
+
+//change mat form field height
+mat-form-field.mat-form-field.mat-form-field-appearance-outline>div.mat-form-field-wrapper>div.mat-form-field-flex>div.mat-form-field-infix {
+  padding: 0.4em 0px;
+}
+
+mat-form-field.mat-form-field.mat-form-field-appearance-outline>div.mat-form-field-wrapper>div.mat-form-field-flex>div.mat-form-field-infix>span.mat-form-field-label-wrapper {
+  top: -1.5em;
+}
+
+.mat-form-field-appearance-outline.mat-form-field-can-float.mat-form-field-should-float .mat-form-field-label {
+  transform: translateY(-1em) scale(0.75);
+  width: 133.33333%;
+}
+
+.mat-form-field-appearance-outline .mat-form-field-prefix,
+.mat-form-field-appearance-outline .mat-form-field-suffix {
+  top: 0 !important;
+}
+
+.my-form-field .mat-form-field-wrapper {
+  padding-bottom: 7px !important;
+}
+
+.mat-form-field {
+  margin-right: 15px;
+
+  // margin-bottom: 8px;
+  .mat-form-field-wrapper {
+    padding: 0;
+
+    .mat-form-field-outline {
+      // color: rgb(255, 255, 255) !important;
+      border: solid 1px #0000008f;
+      // border-radius: 7px !important;
+      box-shadow: rgba(0, 0, 0, 0.09) 0px 3px 12px !important;
     }
   }
-  
+}
