updated to angular 16 successfully

--- a/src/app/first/first.component.html
+++ b/src/app/first/first.component.html
@@ -2,6 +2,7 @@
 <h1>Angular 13 -- installed</h1>
 <h1>Angular 14 -- installed</h1>
 <h1>Angular 15 -- installed</h1>
+<h1>Angular 16 -- installed</h1>
 <hr />
 
 <!-- <apx-chart
