--- a/src/styles.scss
+++ b/src/styles.scss
@@ -19,14 +19,12 @@ $theme-warn: mat.define-palette(mat.$red-palette);
 
 // Create the theme object. A theme consists of configurations for individual
 // theming systems such as "color" or "typography".
-$theme: mat.define-light-theme((
-  color: (
-    primary: $theme-primary,
-    accent: $theme-accent,
-    warn: $theme-warn,
-  ),
-  typography: mat.define-typography-config(),
-));
+$theme: mat.define-light-theme((color: (primary: $theme-primary,
+        accent: $theme-accent,
+        warn: $theme-warn,
+      ),
+      typography: mat.define-typography-config(),
+    ));
 
 // Include theme styles for core and each component used in your app.
 // Alternatively, you can import and @include the theme mixins for each component
@@ -101,4 +99,17 @@ mat-form-field.mat-form-field.mat-form-field-appearance-outline>div.mat-form-fie
       box-shadow: rgba(0, 0, 0, 0.09) 0px 3px 12px !important;
     }
   }
+}
+
+/* Add necessary styles for the spinner */
+.la-ball-clip-rotate-multiple {
+  color: red !important;
+  background-color: #ffffff;
+  /* Add appropriate styles for the spinner type */
+}
+
+/* Add additional styles if needed */
+.loading-text {
+  z-index: 99999;
+  /* Add styles for the loading text */
 }
