Added Apex charts in angular 16

--- a/src/app/first/first.component.html
+++ b/src/app/first/first.component.html
@@ -5,19 +5,19 @@
 <h1>Angular 16 -- installed</h1>
 <hr />
 
-<!-- <apx-chart
+<apx-chart
   [series]="chartOptions.series"
   [chart]="chartOptions.chart"
   [labels]="chartOptions.labels"
   [responsive]="chartOptions.responsive"
-></apx-chart> -->
+></apx-chart>
 <hr />
 
 
 <button (click)="showSpinner()">Show Spinner</button>
 <button (click)="hideSpinner()">Hide Spinner</button>
-<ngx-spinner name="san" bdColor="rgba(0, 0, 0, 0.8)" size="medium" color="#fff" type="ball-clip-rotate-multiple">
-  <p style="color: white"> Loading... </p>
+<ngx-spinner name="san" bdColor="rgba(0, 0, 0, 0.8)" size="medium" color="#3c90df" type="ball-clip-rotate-multiple">
+  <p style="color: #3c90df"> Loading... </p>
 </ngx-spinner>
 <hr />
 
