--- a/src/app/first/first.component.html
+++ b/src/app/first/first.component.html
@@ -3,6 +3,7 @@
 <h1>Angular 14 -- installed</h1>
 <h1>Angular 15 -- installed</h1>
 <h1>Angular 16 -- installed</h1>
+<h1>Angular 17 -- installed</h1>
 <hr />
 
 <apx-chart
